# ApplicantOS

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile.api  Dockerfile.web  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
agents/: README.md
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/tests/: test_health.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: architecture.md
infrastructure/: README.md
scripts/: check.sh
tests/: README.md
