[project]
name = "applicantos-api"
version = "0.1.0"
description = "ApplicantOS FastAPI service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
